--- a/foundations/intro-to-css/02-class-id-selectors/style.css
+++ b/foundations/intro-to-css/02-class-id-selectors/style.css
@@ -1,1 +1,18 @@
+.odd{
+    background-color: pink;
+    font-family: Verdana,DejaVu Sans,sans-serif;
+
+}
+#secondElem{
+    color:blue;
+    font-size:36px;
+}
+#thirdElem{
+    font-size:24px;
+}
+#forthElem{
+    background-color: lightgreen;
+    font-weight:bold;
+    font-size: 24px;
+}
 /* Add CSS Styling */
