--- a/foundations/block-and-inline/02-margin-and-padding-2/style.css
+++ b/foundations/block-and-inline/02-margin-and-padding-2/style.css
@@ -1,27 +1,42 @@
 body {
   background: #eee;
   font-family: sans-serif;
+ 
 }
 
 .card {
   width: 400px;
   background: #fff;
   margin: 16px auto;
+  padding:20px;
 }
 
 .title {
   background: #e3f4ff;
+  font-size: 20px;
+  padding: 20px;
+
 }
 
 .content {
   background: #e3f4ff;
+  padding: 20px;
+  
 }
 
 .button-container {
   background: #e3f4ff;
+  margin-top:20px;
+   padding: 20px;
+   display: block;
+   text-align: center;
+   
 }
 
 button {
   background: white;
   border: 1px solid #eee;
+  display: block;
+  margin:0 auto;
+
 }
