--- a/foundations/flex/02-flex-header/style.css
+++ b/foundations/flex/02-flex-header/style.css
@@ -1,6 +1,11 @@
 .header  {
   font-family: monospace;
   background: papayawhip;
+  display:flex;
+  flex:1;
+  justify-content:space-between;
+  gap:100px;
+  padding: 5px;;
 }
 
 .logo {
@@ -14,6 +19,9 @@
 ul {
   /* this removes the dots on the list items*/
   list-style-type: none;
+  display: flex;
+  justify-content: space-between;
+  flex:1;
 }
 
 a {
@@ -22,4 +30,5 @@ a {
   padding: 8px;
   /* this removes the line under the links */
   text-decoration: none;
+  margin:10px
 }
