--- a/foundations/flex/03-flex-header-2/style.css
+++ b/foundations/flex/03-flex-header-2/style.css
@@ -12,6 +12,10 @@ body {
   background: white;
   border-bottom: 1px solid #ddd;
   box-shadow: 0 0 8px rgba(0,0,0,.1);
+  display:flex;
+  padding: 5px 10px 3px;
+  margin-right:0 ;
+  
 }
 
 .profile-image {
@@ -34,7 +38,9 @@ button {
   border-radius: 8px;
   background: rebeccapurple;
   color: white;
-  padding: 8px 24px;
+  padding: 1px 24px;
+  line-height:1 ;
+  font-size: smaller;
 }
 
 a {
@@ -45,4 +51,14 @@ a {
 
 ul {
   list-style-type: none;
+  display: flex;
+  margin-left:0;
+  gap:20px;
+}
+.notification{
+  margin:auto;
+  display:flex;
+  justify-content:right;
+  flex:1;
+  gap:10px;
 }
