--- a/foundations/flex/04-flex-information/style.css
+++ b/foundations/flex/04-flex-information/style.css
@@ -7,10 +7,55 @@ img {
   height: 100px;
 }
 
-.title {
-  font-size: 36px;
-  font-weight: 900;
+.item1{
+  display: flex;
+  flex-direction: column;
+ justify-content: center;
+ align-items: center;
+ margin:20px;
+  max-width: 200px;
+  
 }
+.item2{
+  display: flex;
+  flex-direction: column;
+   justify-content: center;
+ align-items: center;
+  margin:20px;
+  max-width: 200px;
+
+}
+.item3{
+  display: flex;
+  flex-direction: column;
+ justify-content: center;
+ align-items: center;
+  margin:20px;
+  max-width: 200px;
+
+}
+.item4{
+  display: flex;
+  flex-direction: column;
+ justify-content: center;
+ align-items: center;
+  margin:20px;
+  max-width: 200px;
+
+
+}
+.item5{
+  display: flex;
+  flex-direction: column;
+ justify-content: center;
+ align-items: center;
+  margin:20px;
+      max-width: 200px;
+
+
+}
+
+
 
 /* do not edit this footer */
 .footer {
@@ -23,4 +68,19 @@ img {
   align-items: center;
   justify-content: center;
   background: #eee;
+}
+.container{
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  gap:70px;
+  margin-left:150px;
+  margin-right: 150PX;
+}
+.title{
+  text-align: center;
+  font-size: xx-large;
+  font-weight: bold;
+  margin-bottom: 40px;
+  margin-top: 10px;
 }
