--- a/foundations/flex/05-flex-modal/style.css
+++ b/foundations/flex/05-flex-modal/style.css
@@ -20,6 +20,7 @@ body {
   width: 480px;
   border-radius: 10px;
   box-shadow: 2px 4px 16px rgba(0,0,0,.2);
+  display:flex;
 }
 
 .icon {
@@ -33,6 +34,9 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  width: 40%;
+  height: 70%;
+  MARGIN:20PX
 }
 
 .close-button {
@@ -54,6 +58,8 @@ button {
   cursor: pointer;
   padding: 8px 16px;
   border-radius: 8px;
+  margin-top:15px;
+  margin-bottom:10px;
 }
 
 button.continue {
@@ -66,4 +72,16 @@ button.cancel {
   background: white;
   border: 1px solid #ddd;
   color: royalblue;
+}
+.header_container{
+  display: flex;
+  gap:30%;
+  align-items: center;
+  justify-content: center;
+  font-weight: bold;
+  margin-right: 20px;;
+}
+.text_container{
+  padding: 5px;
+  
 }
